# server/swagger_output.json
@@ -282,7 +282,7 @@
                   "type": "string",
                   "example": "any"
                 },
-                "photo_url": {
+                "photo_url\r": {
                   "type": "string",
                   "example": "any"
                 }
@@ -875,7 +875,7 @@
                   "type": "string",
                   "example": "any"
                 },
-                "resume_url": {
+                "resume_url\r": {
                   "type": "string",
                   "example": "any"
                 }
@@ -1044,7 +1044,7 @@
                   "type": "string",
                   "example": "any"
                 },
-                "resume_url": {
+                "resume_url\r": {
                   "type": "string",
                   "example": "any"
                 }
@@ -1180,7 +1180,7 @@
                   "type": "string",
                   "example": "any"
                 },
-                "photo_url": {
+                "photo_url\r": {
                   "type": "string",
                   "example": "any"
                 }
@@ -1279,6 +1279,26 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      },
+      "delete": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "snapId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
           "401": {
             "description": "Unauthorized"
           },
